Add Alert manager, fix compose_scene